<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_contact">Add to contacts</string>
    <string name="add_link_facebook">Add link to your Facebook profile</string>
    <string name="advise">Advise</string>
    <string name="allow_storage">
        In order to use Google Maps in Realay,
        please grant access to the device storage.
    </string>
    <string name="always_download">
        Always download an up to date list of Realays near you.
    </string>
    <string name="app_restarted">Realay had to be restarted.</string>
    <string name="ban_user">Ban User</string>
    <string name="before_can_join">
        Before you can join, you need to move into the circle on the map.
        \nCheck your Location Settings if you are already here.
    </string>
    <string name="block">Block</string>
    <string name="block_report">Block &amp; Report</string>
    <string name="block_user">Block user</string>
    <string name="blocked_users">Blocked users</string>
    <string name="cancelled_login">Login was cancelled.</string>
    <string name="cannot_locate">
        Please enable location access to see a list of Realays in your town.
    </string>
    <string name="cannot_upload">
        Cannot upload this file at the moment.
        \nPlease make sure you are connected to the internet and try again later.</string>
    <string name="copy_message">Copy message</string>
    <string name="chats">Private Chats</string>
    <string name="choose_language">
        Please choose the language of the message you want to share.
    </string>
    <string name="choose_user_name">Please enter a name.</string>
    <string name="constant_updates">Background updates</string>
    <string name="continue_">Continue</string>
    <string name="currently_distance_away">You are %1$s away.</string>
    <string name="currently_here">You are currently here.</string>
    <string name="delete_conversation_with">
        Do you really want to delete the conversation with %1$s?
    </string>
    <string name="details">Details</string>
    <string name="directions">Directions</string>
    <string name="displays_blocked">
        Displays everyone you have currently blocked and allows you to unblock them.
    </string>
    <string name="do_you_want_to_ban">Do you want to permanently ban %1$s?</string>
    <string name="do_you_want_to_kick">Do you want to kick %1$s?</string>
    <string name="do_you_want_to_block">Do you want to block %1$s?</string>
    <string name="the_person_will">The person will no longer be able to contact you.</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_password">Enter password to join.</string>
    <string name="email_address">Email address</string>
    <string name="enable_map">Enable map</string>
    <string name="enable_network">
        Please enable the location access through the device settings.
        \n\nThis way, Realay makes sure you only talk to people who are really around you.
        \n\nGPS/High Accuracy is optional.
    </string>
    <string name="enable_notifications">All notifications</string>
    <string name="event_ended">The Realay you were in ended a while ago.</string>
    <string name="error_default">An error occurred. Sorry about that!</string>
    <string name="error_open_file_type">
        This type of file cannot be used. Please choose another one.
    </string>
    <string name="fb_name">Facebook username</string>
    <string name="find_the_password">
        You can usually find the password at the entrance to the Realay
        or at a special point of interest.
        Maybe someone around you knows the password.
    </string>
    <string name="feel_free_to_join">Feel free to return to the Realay and join again.</string>
    <string name="get_password_to_join">Ask someone for the password to join this Realay.</string>
    <string name="has_been_blocked">You have blocked %1$s.</string>
    <string name="has_left">%1$s has left %2$s.</string>
    <string name="header_picture">Header Picture</string>
    <string name="if_used_before">
        If you have used Realay on this device before,
        use your old username to log back into your profile.
    </string>
    <string name="hours">Hours</string>
    <string name="image_sharing">Image Sharing</string>
    <string name="ig_name">Instagram username</string>
    <string name="join">Join</string>
    <string name="join_to_share">
        Please join a Realay in your vicinity to share a file with others.
    </string>
    <string name="kick_user">Kick User</string>
    <string name="imperial_units">Imperial units</string>
    <string name="label_users">All Users</string>
    <string name="loading_map">Loading map.</string>
    <string name="loading_older_messages">Loading older messages…</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="loading_user">Loading user list…</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="location_awareness">Location Awareness</string>
    <string name="location_enabled">Location services have been enabled.</string>
    <string name="location_settings">Location Settings</string>
    <string name="logged_in_until">You can only be logged in until %1$s.</string>
    <string name="login">Login</string>
    <string name="manage_location">Adjust location services</string>
    <string name="map">Map</string>
    <string name="map_layers">Switch map layer</string>
    <string name="message_copied">Message copied to clipboard.</string>
    <string name="more_information">More information</string>
    <string name="my_profile">My Profile</string>
    <string name="name_not_empty">Your user name cannot be empty.</string>
    <string name="near_you">Near You</string>
    <string name="new_private_messages">%d new private messages.</string>
    <string name="new_public_messages">%d new public messages.</string>
    <string name="no_blocked_users">
        You have not blocked anyone.\n\n
        If you want to keep someone from contacting you,
        tap and hold one of their messages in a public chat
        or select \'Block User\' from the menu in a private conversation.
    </string>
    <string name="no_messages_yet">
        Welcome!\n\nThere are no public messages yet.\n\nBe
        the first to say something.
    </string>
    <string name="no_private_conversations">
        In this Realay, you currently do not have any private conversations.
        \n\nChoose a person from the user list to start a 1-on-1 chat.
    </string>
    <string name="no_realays_found">
        Could not find any Realays in your town.
        \nPlease try again later.
    </string>
    <string name="no_time_restriction">Without time restriction</string>
    <string name="no_users">
        There are currently no other people online in this place.
        \n\nInvite someone around you to join Realay.
    </string>
    <string name="not_receive_location_hints">
        Please note that you will not receive any location hints,
        if you disable all Realay notifications.
    </string>
    <string name="not_started_yet">
        The event of this Realay has not started yet. Please wait until %1$s.
    </string>
    <string name="notifications">Notifications</string>
    <string name="notify_me_about_everything">
        Notify me about everything going on in the public group chat of a Realay.
    </string>
    <string name="notify_me_about_private">
        Notify me about messages that are sent only to me.
    </string>
    <string name="number_of_users">Currently active users</string>
    <string name="ongoing">Ongoing</string>
    <string name="only_one_at_a_time">
        You can only be in one Realay at a time.\n
        \nIf you leave, you will no longer receive any messages.
    </string>
    <string name="part_of_event">
        This Realay was part of an event that ended at %1$s.
    </string>
    <string name="part_of_event_stay">
        This Realay is part of an event that ended at %1$s.
        \n\nYou can stay logged in here until %2$s.
    </string>
    <string name="picture">Picture</string>
    <string name="phone_number">Phone number</string>
    <string name="photo_message">Photo message</string>
    <string name="private_chats">Private Chats</string>
    <string name="private_conversation">Private conversation</string>
    <string name="private_messages">Private messages</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="public_chat_messages">Public chat messages</string>
    <string name="public_or_private">
        Would you like to share this image with everyone or only with one person?
    </string>
    <string name="requested_to_leave">You have been requested to leave.</string>
    <string name="return_location" formatted="false">
        Please return to the area of the current Realay until %1$s.
        \n\nKeep Wi-Fi &amp; mobile network location activated.
        \n\nGPS / high accuracy is optional. Enabling Wi-Fi is recommended.\n
    </string>
    <string name="return_until">Please come back until %1$s.</string>
    <string name="save">Save</string>
    <string name="security">Security</string>
    <string name="select_picture">Select a picture</string>
    <string name="select_sharing_language">
        Select Sharing Language
    </string>
    <string name="send">Send</string>
    <string name="send_privately">Private message</string>
    <string name="send_report">
        Besides blocking, you can also send us an automated report about this person\'s behaviour.
        \n\nYou are able to unblock someone in the app settings, at any time.
    </string>
    <string name="send_to_all">Public message</string>
    <string name="session_terminated">Your session had to be terminated.</string>
    <string name="settings">Settings</string>
    <string name="share_location">Share Location</string>
    <string name="size">Size</string>
    <string name="status_message">Status message</string>
    <string name="stay_in_boundaries">
        Please stay within the area of the Realay and make sure that your location
        can be verified every once in a while.
    </string>
    <string name="show_profile">Show profile</string>
    <string name="take_photo">Take a photo</string>
    <string name="takes_longer">Connecting seems to take longer than usual…</string>
    <string name="tap_to_hide">Tap to hide</string>
    <string name="terrain">Terrain</string>
    <string name="timeout_occurred">
        A timeout occurred.
        \n\nFor several minutes, the app could not connect to the internet to receive new messages.
    </string>
    <string name="too_late">Too Late</string>
    <string name="twitter_name">Twitter username</string>
    <string name="try_again">Please try again.</string>
    <string name="unblock">Unblock</string>
    <string name="unlink_facebook">Unlink Facebook profile</string>
    <string name="until">Until</string>
    <string name="update_play">
        Cannot open Google Maps.
        \nPlease update Google Play Services.
    </string>
    <string name="use_imperial">Use feet, yard and miles instead of metres and kilometres.</string>
    <string name="users">All Users</string>

    <string name="want_to_leave">Do you want to leave this Realay?</string>
    <string name="website">Website</string>
    <string name="where_are_you">Where are you?</string>
    <string name="wrong_password">
        Sorry, wrong password for %1$s.
    </string>

</resources>
